--- a/package.json
+++ b/package.json
@@ -9,9 +9,18 @@
     ],
     "scripts": {
         "build": "yarn es-build",
+        "clean": "rimraf ./dist && rimraf ./build && rimraf ./tmp",
         "ts-build": "yarn tsc",
-        "es-build": "yarn pnpify esbuild src/handlers.ts --bundle --minify --sourcemap --platform=node --target=es2020 --outfile=dist/index.js",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "es-build": "yarn pnpify ts-node src/esbuild.ts",
+        "sam-build": "sam build --debug --build-dir build",
+        "sam-build-docker": "make create-yarn-wrap && yarn sam-build -e IN_DOCKER=true --use-container",
+        "build-for-debug": "DEBUG_MODE=true yarn build && yarn sam-build-docker -e DEBUG_MODE=true --parameter-overrides BuildType=Debug",
+        "invoke:TestEntrypoint": "sam local invoke TestEntrypoint --container-env-vars ./local-env.json",
+        "invoke:TypeFunction": "sam local invoke TypeFunction --container-env-vars ./local-env.json",
+        "invoke-for-debug:TestEntrypoint": "sam local invoke TestEntrypoint -d 9888 --parameter-overrides BuildType=Debug --container-env-vars ./local-env.json",
+        "invoke-for-debug:TypeFunction": "sam local invoke TypeFunction -d 9888 --parameter-overrides BuildType=Debug --container-env-vars ./local-env.json",
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "generate-model": "cfn generate"
     },
     "dependencies": {
         "@amazon-web-services-cloudformation/cloudformation-cli-typescript-lib": "^1.0.1",
