build: handling local server debug

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -28,5 +28,20 @@
       ],
       "type": "node"
     },
+    // This is for running the local lambda - you need it attached at every request
+    {
+      "name": "Attach to SAM: start-local",
+      "port": 9888,
+      "request": "attach",
+      "skipFiles": [
+        "<node_internals>/**"
+      ],
+      "remoteRoot": "/var/task/dist/",
+      "localRoot": "${workspaceFolder}/dist",
+      "outFiles": [
+        "!**/node_modules/**"
+      ],
+      "type": "node"
+    },
   ]
 }
