--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
         "clean": "rimraf ./dist && rimraf ./build && rimraf ./tmp",
         "ts-build": "yarn tsc",
         "es-build": "yarn pnpify ts-node src/esbuild.ts",
-        "sam-build": "sam build --debug --build-dir build",
+        "sam-build": "sam build --debug",
         "sam-build-docker": "make create-yarn-wrap && yarn sam-build -e IN_DOCKER=true --use-container",
-        "build-for-debug": "DEBUG_MODE=true yarn build && yarn sam-build-docker -e DEBUG_MODE=true --parameter-overrides BuildType=Debug",
-        "invoke:TestEntrypoint": "sam local invoke TestEntrypoint --container-env-vars ./local-env.json",
-        "invoke:TypeFunction": "sam local invoke TypeFunction --container-env-vars ./local-env.json",
-        "invoke-for-debug:TestEntrypoint": "sam local invoke TestEntrypoint -d 9888 --parameter-overrides BuildType=Debug --container-env-vars ./local-env.json",
-        "invoke-for-debug:TypeFunction": "sam local invoke TypeFunction -d 9888 --parameter-overrides BuildType=Debug --container-env-vars ./local-env.json",
-        "start-local-debug": "yarn start-local -d 9888 --parameter-overrides BuildType=Debug",
-        "start-local": "sam local start-lambda --container-env-vars ./local-env.json",
+        "sam-build-docker:debug": "DEBUG_MODE=true yarn build && yarn sam-build-docker -e DEBUG_MODE=true --parameter-overrides BuildType=Debug",
+        "invoke:TestEntrypoint": "sam local invoke TestEntrypoint --parameter-overrides Endpoint=Local",
+        "invoke:TypeFunction": "sam local invoke TypeFunction --parameter-overrides Endpoint=Local",
+        "invoke-for-debug:TestEntrypoint": "sam local invoke TestEntrypoint -d 9888 --parameter-overrides BuildType=Debug Endpoint=Local",
+        "invoke-for-debug:TypeFunction": "sam local invoke TypeFunction -d 9888 --parameter-overrides BuildType=Debug Endpoint=Local",
+        "start-lambda:debug": "yarn start-lambda -d 9888 --parameter-overrides BuildType=Debug Endpoint=Local",
+        "start-lambda": "sam local start-lambda --parameter-overrides Endpoint=Local",
         "test": "echo \"Error: no test specified\" && exit 1",
         "generate-model": "cfn generate"
     },
