--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "@types/node": "^14.0.0",
         "esbuild": "^0.19.1",
         "rimraf": "^5.0.1",
+        "ts-node": "^10.9.1",
         "typescript": "^4.1.2"
     },
     "optionalDependencies": {
